1.23.1:
-------
- libmpg123:
-- Fix logic to prevent cases of output devices being closed more than once
   (stop after pausing triggered multiple close calls, which broke sndio, for
   example).
- mpg123:
-- Hide networking-related command-line parameters when disabled.

1.23.0:
-------
- libmpg123 version 42
-- This adds mpg123_framelength() and makes mpg123_position() truly obsolete.
-- Equalizer optional now (./configure --disable-equalizer) to save precious
   memory
-- Clip decode tables for large amplification with fixed-point decoders.
   Without that, high-pitched distortion enters really quickly when
   trying to increase volume even if output samples would not be clipped,
   weren't it for fixed-point math.
- libout123 version 1: First incarnation of libout123, a basic library to
  get audio data written to audio devices (or files) in simple blocking
  manner as opposed to callback APIs (which it wraps over). This collects
  the output modules of mpg123 and makes them available to the wider
  masses. Also, the separate shared memory buffer process (contained
  in libout123) got a lot of reworking which should be noticable in the
  interaction with terminal control.
-- Some tuning of several output drivers (modules) regarding flexible
   buffer size, client names, supported formats.
-- Notably the JACK output got a major overhaul and now does not swallow
   audio at the end anymore. Huge latency also reduced and tunable. Encoding
   fixed to floating point, so that libmpg123 actually chooses what is
   sensible.
- Added mpg123 --no-infoframe.
- Detect terminal on input side and enable control keys automatically.
  There is --no-control now to disable terminal control anyway.
- Display stuff:
-- Avoid spillover of status line that caused unwanted terminal scrolling.
   If the terminal width is smaller than the full status string, a cut is
   made to make it fit.
-- Draw a progress bar on the terminal by inversing colors behind status
   line.